projects/word-weaver/src/scss/_shame.scss
// ==========================================================================
// $Shame
// @see http://csswizardry.com/2013/04/shame-css/
// Thanks https://github.com/heroheman/shepherd/blob/master/sass/_shame.scss
// ==========================================================================

// ==========================================================================
// because hacks happen.
//
// be very specific about what each piece of code is doing, and
// how to better fix it later
// ==========================================================================

// Try:  $ git blame _shame.scss

// Rules:
// ---------------
//   1. If it’s a hack, it goes in _shame.scss.
//   2. Document all hacks fully:
//   3. What part of the codebase does it relate to?
//   4. Why was this needed?
//   5. How does this fix it?
//   6. How might you fix it properly, given more time?
//   7. Do not blame the developer; if they explained why they had to do it then their reasons are probably (hopefully) valid.
//   8. Try and clean _shame.scss up when you have some down time.

// Example:
// ---------------
// Nav specificity fix.

// Someone used an ID in the header code (`#header a{}`) which trumps the
// nav selectors (`.site-nav a{}`). Use !important to override it until I
// have time to refactor the header stuff.

// .site-nav a { color:#BADA55!important; }

// Hack to add scroll bar to chip list. I didn't want to use ::deep or anything like that, so it goes here.

.mat-checkbox-layout .mat-checkbox-label {
  line-height: 1em;
}

.mat-chip-list-wrapper {
  @extend %scroll;
  margin: 0 !important;
}

/* Mat Chip */
// Mat chips have a bunch of annoying default styles when in a list. This overides that.

.mat-chip:not(.mat-basic-chip) {
  color: $white;
  margin: em(5);
  cursor: pointer;
}

.mat-chip.selected {
  color: $color-accent;
  margin: em(5);
  cursor: pointer;
}

.mat-chip:not(.mat-basic-chip) + .mat-chip:not(.mat-basic-chip) {
  margin: em(5) !important;
}

// Let checkboxes be colored after verbs
@each $theme, $color in $verb-highlight-color-names {
  .mat-checkbox-checked.mat-#{"" + $theme + ""} .mat-checkbox-background {
    background-color: $color !important;
  }
}

.mat-icon {
  @each $name, $value in $font-sizes {
    &.icon-#{$name} {
      height: em($value) !important;
      width: em($value) !important;
      font-size: em($value) !important;
    }
  }
}

// Make toggle group smaller
.mat-button-toggle-label-content {
  line-height: em(30) !important;
  padding: 0 em(16) !important;
}

mat-button-toggle-group {
  height: 2em;
  font-size: em(map-get($font-sizes, sm));
}

.mat-checkbox-layout {
  white-space: normal !important;
}

.mat-menu-panel {
  float: right;
}

